		* Allow to import arrays in JSON files that contain plain data only
	* [examples]
		* Added "All" in the examples dialog to navigate and search in the example projects from _all_ collections

Performance improvements:
		* Improved drawing performance (!731)
		* Improved the performance of importing JSON files with a large number of elements
		* Faster save/load of text columns
		* Faster cutting of cells in the spreadsheet (BUG 513574)

Bug fixes:
	* Fix displayed locale of constants
	* Rename of psi constant to psqi to avoid clash with psi function
	* Fix crash when loading a project with a workbook as first child (!787)
	* Fix updating column count in spreadsheet dock when importing data from file
	* Fix appending data to spreadsheets from XLSX files
	* Fix the bar chart with log-scales
	* Undo background color of text label (#1171)

-----2.12.1 (2025-08-15) -----
Bug fixes:
	* Fix using default font for axis title
	* Fix build with system QXlsx (!693)
	* Fix build with system QADS 4.4 (!694)
	* Crash on import when no projects opened (BUG 503800)
	* Save rotation of axis title seperately for x and y axis
	* Fix disappearing axis ticks (#1146)
	* Don't crash when creating the data spreadsheet for analysis curves (BUG 504662)
	* Fix crash when aspect is added and all docks in content area are hidden (BUG 504794, 502043)
	* Fix crash when column or row was added to spreadsheet from toolbar and no column or row was selected (BUG 504839)
	* Fix issue when the statistics spreadsheet was not shown if the spreadsheet was a child of workbook
	* Fix issue which caused the context menu of an aspect to not be shown after being reparented
	* Handle Windows logical font "MS Shell Dlg 2"
	* Fix crash when deleting a livedata source with missing source file
	* Parser: Remove not required function and reuse function instead of copying (BUG 506925)
	* Fix the export of spreadsheets to SQLite, wrong format was selected internally in the export dialog